Revert "Merge pull request #1 from apurvanakade/develop"
This reverts commit a40bd1066abe7a34c2bf3ef1e08d553335f03622, reversing
changes made to ada1fabacb4f1a8bc8620b03e1fde617f03d1f95.

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 --- 
 title: "Apurva Nakade"
-author: "[CV], email: <span onMouseOver=\"this.innerHTML='alastname@uwo.ca'\"
-        onMouseOut=\"this.innerHTML='(left as an exercise to the reader)'\">(left as an exercise to the
-        reader)</span> <br />" 
-        # Résumé: [CV], [Research Statement (video)], [Teaching Portfolio] 
+author: "email: <span onMouseOver=\"this.innerHTML='alastname@uwo.ca'\"
+                onMouseOut=\"this.innerHTML='(left as an exercise to the reader)'\">(left as an exercise to the
+                reader)</span>, [CV] <br />" 
+                # Résumé: [CV], [Research Statement (video)], [Teaching Portfolio] 
 output: bookdown::gitbook
 github-repo: apurvanakade/apurvanakade.github.io
 description: "Personal Website."
