add office hours

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ url: https\://apurvanakade.github.io/
 <div style="text-align:right; font-size: 90%;">
 
 **Email:** [apurva.nakade@northwestern.edu](mailto:apurva.nakade@northwestern.edu) <br/>
-**Office hours:** 
+**Office hours:** MF 3-4:30 pm in Locy 109 
 
 </div>
 
