--- a/index.Rmd
+++ b/index.Rmd
@@ -9,19 +9,19 @@ url: https\://apurvanakade.github.io/
 <div style="text-align:right; font-size: 90%;">
 
 **Email:** [apurva.nakade@northwestern.edu](mailto:apurva.nakade@northwestern.edu) <br/>
-**Office hours:** WF 3-4:30 pm in Locy 318 
+**Office hours:** TTh 3-4:30 pm in Locy 301 
 
 </div>
 
 ![](images/me0.jpg "Apurva Nakade")
 
-I\'m a postdoctoral lecturer in the [Math Department](https://www.math.northwestern.edu/) at Northwestern University. 
-In Winter 2023, I'm
+I am a postdoctoral lecturer in the [Math Department](https://www.math.northwestern.edu/) at Northwestern University. 
+In Spring 2023, I'm
 
-- Coordinating Math 290-2,
-- Teaching Math 300,
+- Coordinating Math 290-3,
+- Teaching Math 250,
 - Working on [PreText](https://pretextbook.org/) and [WeBWorK](https://webwork.maa.org/) for Aaron Greicius' [linear algebra textbook](http://linear-algebra.northwestern.pub/frontmatter-1.html),
 - Mentoring for the [Causeway Postbac Program](https://sites.northwestern.edu/causeway/),
-- Formalizing math for [mathlib](https://github.com/leanprover-community/mathlib) in [Lean](https://leanprover.github.io/).
+- Trying to formalize math for [mathlib](https://github.com/leanprover-community/mathlib) in [Lean](https://leanprover.github.io/).
 
-When not doing math, you can find me doing yoga, running, reading, or exploring Chicago's West Coast Swing scene.
+When not doing math, you can find me doing yoga, running, reading, or exploring Chicago's West Coast Swing scene. Starting Fall 2023, I'll be a Senior Lecturer at Johns Hopkins University, Applied Mathematics and Statistics.
